[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.poetry]
name = "argh"
version = "0.28.0"
description = "An unobtrusive argparse wrapper with natural syntax"
authors = ["Andy Mikhaylenko <neithere@gmail.com>"]
license = "GNU Lesser General Public License (LGPL), Version 3"
readme = "README.rst"
packages = [
  { include = "src/argh" }
]
repository = "https://github.com/neithere/argh"
keywords = [
  "cli",
  "command line",
  "argparse",
  "optparse",
  "argument",
  "option",
]
classifiers  = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"

sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
black = "^22.12"
wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6.0"
isort = "^5"

tox = "^3"

pytest = "^2.3.7"
pytest-cov = "^1.8.0"
pytest-xdist = "^1.11"
iocapture = "^0.1.2"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.isort]
multi_line_output = 3
