[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "argh"
version = "0.31.3"
description = "Plain Python functions as CLI commands without boilerplate"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "COPYING.LESSER" }
authors = [
  { name = "Andy Mikhaylenko", email = "neithere@gmail.com" },
]
maintainers = [
  { name = "Andy Mikhaylenko", email = "neithere@gmail.com" },
]
keywords = [
  "cli",
  "command line",
  "argparse",
  "optparse",
  "argument",
  "option",
]
classifiers  = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/neithere/argh"
"Issue Tracker" = "https://github.com/neithere/argh/issues"
Discussions = "https://github.com/neithere/argh/discussions"
"Releases" = "https://github.com/neithere/argh/releases"
Documentation = "https://argh.readthedocs.io/en/latest"

[project.optional-dependencies]
completion = [
  "argcomplete >= 2.0",
]
test = [
  "tox >= 4.11.3",
  "pytest >= 7.4",
  "pytest-cov >= 4.1",
]
docs = [
  "sphinx >= 7.2",
  "sphinx-pyproject == 0.3",
  "sphinx_rtd_theme >= 2.0",
  "readthedocs-sphinx-search == 0.3.2",
]
linters = [
  "pre-commit >= 3.4.0",
]

[tool.distutils.bdist_wheel]
universal = 1

[tool.bandit]
exclude_dirs = ["tests"]

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "CHANGES.rst",
  "COPYING",
  "COPYING.LESSER",
  "tests/",
  "tox.ini",
]

[tool.doc8]
max-line-length = 95
